@@ -3,7 +3,6 @@ package com.example.tech_interview_buddy.app.service.notification;
 import com.example.tech_interview_buddy.app.dto.response.NotificationResponse;
 import com.example.tech_interview_buddy.domain.repository.NotificationRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,7 +18,7 @@ public class NotificationQueryService {
         return notificationRepository.findByUserIdOrderByCreatedAtDesc(userId)
             .stream()
             .map(NotificationResponse::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional(readOnly = true)
